# TDS_project_quiz_solver

./: .dockerignore  .gitignore  CACHE_IMPLEMENTATION_SUMMARY.md  COMPLETION_OPTIMIZATION_SUMMARY.md  Dockerfile  IDEAS.md  LICENSE  LLM_FUNCTIONS_DOCUMENTATION.md  README.md  TEST_ENDPOINTS.md  TOOL_MAINTENANCE.md  cache_manager.py  clean_logs.py  completion_checker.py  docker-compose.yml  executor.py  executor_old.py  fix_indent.py  generate_test_pdf.py  inject_answer.py  llm_client.py  main.py  main_old.py  models.py  parallel_executor.py  pyproject.toml  task_generator.py  test.json  test_advanced.json  test_cache.py  test_completion_optimization.py  test_project2.json  test_quizzes.py  tool_definitions.py  tool_executors.py  tools.py
docs/: ADVANCED_TEST_SUITE.md  CENTRALIZED_LLM_SUMMARY.md  COMPREHENSIVE_TEST_SUITE.md  DESIGN_PRINCIPLES.md
